# finlab

./: .gitignore  pyproject.toml
api/: main.py
api/config/: prompts.py  settings.py
api/models/: agent.py  ticker_extractor.py
api/routers/: agent.py  rag.py  search.py
api/services/: agent.py  embeddings.py  rag.py  search.py  ticker_extractor.py
evaluations/: level-1-unit-tests.py  level-2-unit-tests.py  level-3-human-annotation.py  level-4-llm-as-judge.py
guardrails/: guardrails-demo-1.py  guardrails-demo-2.py  guardrails-demo-3.py
guardrails/.guardrails/: hub_registry.json
ingestion/: create_collection.py  create_indexes.py  ingestion.py  news_ingestion.py  test-query.py
ingestion/utils/: news_client.py  semantic_chunker.py  simple_chunker.py
