[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edgar>=5.6.3",
    "edgartools>=5.36.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "hdbscan>=0.8.44",
    "instructor>=1.15.3",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "sentence-transformers>=5.6.0",
    "trafilatura>=2.1.0",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
